# tauri-dam-test-playground

./: Cargo.toml  pnpm-lock.yaml
.cargo/: config.toml
apps/api-server/client/: types.ts
apps/api-server/src/ctx/: default.rs  traits.rs
apps/api-server/src/routes/assets/: create.rs  process.rs
apps/api-server/src/routes/video/: delete_file.rs  mod.rs
apps/web/: next.config.mjs  package.json
apps/web/src/: declarations.d.ts
apps/web/src/app/: ClientLayout.tsx  layout.tsx
apps/web/src/components/: UploadButton.tsx
apps/web/src/components/Inspector/: index.tsx
apps/web/src/components/Shared/QuickView/: index.tsx
apps/web/src/components/Video/: index.tsx
apps/web/src/hooks/: useFfmpeg.ts  useUpdater.ts  useVideoDecoderUrl.ts  useVideoPlayer.ts
crates/file-handler/: Cargo.toml
crates/file-handler/src/video/: mod.rs
crates/file-handler/src/video/decoder/: mod.rs
crates/prisma/: Cargo.toml
crates/prisma-cli/: Cargo.toml
crates/prisma/src/: lib.rs
crates/sync/: Cargo.toml
crates/sync-core/: Cargo.toml
crates/sync-core/src/: backfill.rs  db_operation.rs  ingest.rs  lib.rs  manager.rs
crates/sync-core/tests/: lib.rs  mock_instance.rs
crates/sync-generator/: Cargo.toml
crates/sync-utils/: Cargo.toml
crates/sync-utils/src/: db.rs  error.rs  lib.rs
crates/sync/src/: factory.rs
prisma/: schema.prisma
prisma/migrations/20240327052314_create_sync/: migration.sql
