[workspace]
resolver = "2"
members = ["crates/*", "apps/api-server", "apps/desktop/src-tauri"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
rspc = { version = "=0.2.0" }
rspc-axum = { version = "0.1.1", features = ["ws"] }
rspc-tauri = { version = "0.0.1" }
specta = { version = "=2.0.0-rc.7" }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", rev = "f99d6f5566570f3ab1edecb7a172ad25b03d95af", features = [
  "specta",
  "sqlite-create-many",
  "rspc",
  "migrations",
  "sqlite",
], default-features = false }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", rev = "f99d6f5566570f3ab1edecb7a172ad25b03d95af", features = [
  "specta",
  "sqlite-create-many",
  "rspc",
  "migrations",
  "sqlite",
], default-features = false }
prisma-client-rust-sdk = { git = "https://github.com/spacedriveapp/prisma-client-rust", rev = "f99d6f5566570f3ab1edecb7a172ad25b03d95af", features = [
    "sqlite",
], default-features = false }
uuid = { version = "1.8.0", features = ["v4", "v5"] }
tokio = "1.35"
tokio-util = "0.7.10"
test-log = { version = "0.2.14", features = ["trace"] }
futures = "0.3.30"
serde_json = "1.0"
serde = "1.0"
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.79"
reqwest = "0.11.24"
qdrant-client = { version = "1.8.0" }
image = "0.25.0"
rmpv = { version = "^1.0.1", features = ["with-serde"] }
uhlc = "=0.5.2"
thiserror = "1.0.50"

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 3

# Set the default for dependencies, except workspace members.
[profile.dev.package."*"]
opt-level = 3
incremental = false
