[package]
name = "prisma-lib"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
sd_sync = { path = "../sync" }

prisma-client-rust = { workspace = true }
prisma-client-rust-cli = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rmp-serde = "1.1.2"
rmpv.workspace = true
uuid = { workspace = true }
uhlc.workspace = true

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }
rand = "0.8.5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
