[package]
name = "sync-core"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-lib = { path = "../prisma" }
sd_sync = { path = "../sync" }
sync-utils = { path = "../sync-utils" }

prisma-client-rust.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true
uhlc.workspace = true
rmp-serde = "1.1.2"
rmpv.workspace = true